syntax = "proto3";

package servicev1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "notionboy/api/pb/v1/conversation;conversation";

message Product {
  string id = 1;
  string created_at = 2;
  string updated_at = 3;
  string deleted = 4;
  string uuid = 5;
  string name = 6;
  float price = 7;
  int64 token = 8;
  int64 storage = 9;
  string description = 10;
}

message CreateProductRequest {
  string name = 1;
  float price = 2;
  int64 token = 3;
  int64 storage = 4;
  string description = 5;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message GetProductRequest {
  string id = 1;
}

message DeleteProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  float price = 3;
  int64 token = 4;
  int64 storage = 5;
  string description = 6;
}
